--- a/src/styles.css
+++ b/src/styles.css
@@ -36,8 +36,11 @@ button {
 }
 a {
   text-decoration: none;
+  cursor: default;
 }
-
+.block-main-parameters {
+  padding-bottom: 10px;
+}
 .weather-parameters {
   padding-top: 30px;
   font-size: 16px;
@@ -56,6 +59,8 @@ a {
   font-size: 40px;
   font-weight: 600;
 }
+.current-temperature a {
+}
 .degree {
   font-size: 15px;
 }
@@ -63,4 +68,7 @@ a {
   text-align: center;
   display: block;
   margin: 0 auto;
+}
+#icon {
+  height: 150px;
 }
