--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 .weather-app {
   width: 40%;
-  margin: 30px auto;
+  margin: 25px auto;
   top: 50px;
   background: linear-gradient(-225deg, #20e2d7 0%, #f9fea5 100%);
   padding: 20px;
@@ -45,6 +45,9 @@ a {
 a:hover {
   color: #00ffff;
 }
+.header {
+  padding-left: 10px;
+}
 .search-button {
   padding: 1px 10px;
 }
@@ -74,7 +77,7 @@ a:hover {
   padding-left: 20%;
 }
 .temperature {
-  padding-top: 15px;
+  padding-top: 20px;
 }
 .temperature p {
   margin-bottom: 0;
@@ -83,7 +86,9 @@ a:hover {
   font-size: 40px;
   font-weight: 600;
 }
-
+.feeling {
+  padding-top: 8px;
+}
 .degree {
   font-size: 15px;
 }
@@ -115,8 +120,5 @@ a:hover {
   border-radius: 15px;
 }
 .weather-forecast p {
-  margin-bottom: 10px;
-}
-.weather-forecast img {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
